complete task, refactor

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
         <div id="root">
             <div id="error"></div>
             <div class="search">
-                <input type="text" id="search-input" placeholder="Search keyword..." />
+                <input type="text" id="search-title" placeholder="Search keyword..." />
+                <input type="text" id="search-year" placeholder="Search by year..." />
                 <button id="search-button">Search</button>
             </div>
 
